<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">autoRep</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Umsebenzisi</string>
    <string name="done">gqibile</string>
    <string name="alternative">enye i-number</string>
    <string name="name">igama</string>
    <string name="number">i-number</string>

</resources>