<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/toggleButton1"
    android:layout_centerVertical="true" >

    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="354dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" >

            <requestFocus />
        </EditText>
        
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alternative" />

        <EditText
            android:id="@+id/alt_num"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/number" >

            <requestFocus />
        </EditText>
        
        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

      
</FrameLayout>